--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <div class="item">
         <h2 class="item_title">
-          I'm not made to cut corners.
+          I'm not made to cut corners. I prefer when the edges flow
         </h2>
         <div class="item_image">
           <img src="https://images.unsplash.com/photo-1490168105446-f43395eb50b5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2952&q=80" alt="">
